# TaskZone

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  text.py
database/: models.py  requests.py
handlers/: user.py
keyboards/: user.py
states/: user.py
utils/: ai_manager.py  calendar.py  notifier.py  reminder.py
